--- a/app/src/main/res/layout/activity_user_trip_schedule.xml
+++ b/app/src/main/res/layout/activity_user_trip_schedule.xml
@@ -44,7 +44,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/scheduleList"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="#EEEEEE"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
