--- a/app/src/main/res/layout/booking_transport_pending_item_layout.xml
+++ b/app/src/main/res/layout/booking_transport_pending_item_layout.xml
@@ -230,6 +230,7 @@
                         android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
+
                     <Space
                         android:layout_width="match_parent"
                         android:layout_height="6dp" />
@@ -353,6 +354,22 @@
                             android:textColor="@color/textColor"
                             android:textSize="16sp" />
                     </LinearLayout>
+
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="6dp" />
+
+                    <TextView
+                        android:id="@+id/timestamp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:fontFamily="@font/lato"
+                        android:gravity="end"
+                        android:maxLines="1"
+                        android:text=""
+                        android:textColor="#99121212"
+                        android:textSize="14sp" />
 
                 </LinearLayout>
             </LinearLayout>
