--- a/app/src/main/res/layout/booking_user_confirmed_item_layout.xml
+++ b/app/src/main/res/layout/booking_user_confirmed_item_layout.xml
@@ -14,7 +14,8 @@
         android:clickable="true"
         android:elevation="8dp"
         android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground">
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardCornerRadius="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -431,7 +432,7 @@
                             android:textSize="14sp" />
 
                         <TextView
-                            android:id="@+id/bookingPlateNumber"
+                            android:id="@+id/bookingVanNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
@@ -471,6 +472,22 @@
                                 android:textColor="@color/textColor"
                                 android:textSize="16sp" />
                         </LinearLayout>
+
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="6dp" />
+
+                        <TextView
+                            android:id="@+id/timestamp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/lato"
+                            android:gravity="end"
+                            android:maxLines="1"
+                            android:text=""
+                            android:textColor="#99121212"
+                            android:textSize="14sp" />
 
                     </LinearLayout>
                 </LinearLayout>
