--- a/app/src/main/res/layout/booking_user_history_item_layout.xml
+++ b/app/src/main/res/layout/booking_user_history_item_layout.xml
@@ -284,7 +284,7 @@
                             android:textSize="14sp" />
 
                         <TextView
-                            android:id="@+id/labelPlateNumber"
+                            android:id="@+id/labelVanNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
@@ -445,7 +445,7 @@
                             android:textSize="14sp" />
 
                         <TextView
-                            android:id="@+id/bookingPlateNumber"
+                            android:id="@+id/bookingVanNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
@@ -499,6 +499,22 @@
                                 android:textColor="@color/textColor"
                                 android:textSize="16sp" />
                         </LinearLayout>
+
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="6dp" />
+
+                        <TextView
+                            android:id="@+id/timestamp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:gravity="end"
+                            android:fontFamily="@font/lato"
+                            android:maxLines="1"
+                            android:text=""
+                            android:textColor="#99121212"
+                            android:textSize="14sp" />
 
                     </LinearLayout>
                 </LinearLayout>
