--- a/app/src/main/res/layout/dialog_scan_layout.xml
+++ b/app/src/main/res/layout/dialog_scan_layout.xml
@@ -355,7 +355,7 @@
                             android:textSize="14sp" />
 
                         <TextView
-                            android:id="@+id/bookingPlateNumber"
+                            android:id="@+id/bookingVanNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato"
