--- a/app/src/main/res/drawable/background_sched_item_price.xml
+++ b/app/src/main/res/drawable/background_sched_item_price.xml
@@ -4,5 +4,7 @@
         android:angle="45"
         android:endColor="#CC4ABAFF"
         android:startColor="#CC0795FF" />
-    <corners android:topRightRadius="16dp" />
+    <corners
+        android:bottomLeftRadius="16dp"
+        android:topLeftRadius="16dp" />
 </shape>
