--- a/app/src/main/res/layout/booking_transport_cancelled_item_layout.xml
+++ b/app/src/main/res/layout/booking_transport_cancelled_item_layout.xml
@@ -383,6 +383,22 @@
                             android:textSize="16sp" />
                     </LinearLayout>
 
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="6dp" />
+
+                    <TextView
+                        android:id="@+id/timestamp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:gravity="end"
+                        android:fontFamily="@font/lato"
+                        android:maxLines="1"
+                        android:text=""
+                        android:textColor="#99121212"
+                        android:textSize="14sp" />
+
                 </LinearLayout>
             </LinearLayout>
 
