--- a/app/src/main/res/layout/booking_user_pending_item_layout.xml
+++ b/app/src/main/res/layout/booking_user_pending_item_layout.xml
@@ -187,10 +187,10 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -357,6 +357,22 @@
                             android:textColor="@color/textColor"
                             android:textSize="16sp" />
                     </LinearLayout>
+
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="6dp" />
+
+                    <TextView
+                        android:id="@+id/timestamp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:fontFamily="@font/lato"
+                        android:gravity="end"
+                        android:maxLines="1"
+                        android:text=""
+                        android:textColor="#99121212"
+                        android:textSize="14sp" />
 
                     <Space
                         android:layout_width="match_parent"
