--- a/app/src/main/res/layout/stats_van_transport_admin_dashboard.xml
+++ b/app/src/main/res/layout/stats_van_transport_admin_dashboard.xml
@@ -59,7 +59,7 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/lato"
                 android:maxLines="1"
-                android:text="NYLES"
+                android:text="-N/A-"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp" />
         </LinearLayout>
@@ -82,7 +82,7 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/lato"
                 android:maxLines="1"
-                android:text="1"
+                android:text="0"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp" />
         </LinearLayout>
@@ -105,7 +105,7 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/lato"
                 android:maxLines="1"
-                android:text="1"
+                android:text="0"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp" />
         </LinearLayout>
@@ -128,7 +128,7 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/lato"
                 android:maxLines="1"
-                android:text="1"
+                android:text="-N/A-"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp" />
         </LinearLayout>
