--- a/app/src/main/res/layout/rent_chat_message_item_layout.xml
+++ b/app/src/main/res/layout/rent_chat_message_item_layout.xml
@@ -61,6 +61,40 @@
 
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/systemMessageItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_marginHorizontal="64dp"
+        android:background="@drawable/background_receiver_chat_message"
+        android:gravity=""
+        android:orientation="vertical"
+        android:padding="8dp">
+
+        <TextView
+            android:id="@+id/systemMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/lato"
+            android:maxLength="255"
+            android:text=""
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/systemMessageTimestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:fontFamily="@font/lato"
+            android:maxLines="1"
+            android:text=""
+            android:textColor="#99FFFFFF"
+            android:textSize="14sp" />
+    </LinearLayout>
+
     <RelativeLayout
         android:id="@+id/chatSenderItem"
         android:layout_width="match_parent"
